# sdl

./: .gitignore  sdl3_init
01-clear/: CMakeLists.txt
03-lines/: CMakeLists.txt  compile_commands.json  lines.c
04-rectangles/: CMakeLists.txt  compile_commands.json  rectangles.c
examples/01-clear/: CMakeLists.txt  clear.c  compile_commands.json
examples/02-primitives/: CMakeLists.txt  compile_commands.json  primitives.c
examples/03-lines/: CMakeLists.txt
examples/04-rectangles/: CMakeLists.txt
examples/05-points/: CMakeLists.txt  points.c
examples/06-textures/: CMakeLists.txt  textures.c
examples/07-streaming-textures/: CMakeLists.txt  streaming-textures.c
examples/08-rotating-textures/: CMakeLists.txt  rotating-textures.c
examples/09-scaling-textures/: CMakeLists.txt  scaling-textures.c
examples/10-geometry/: CMakeLists.txt  geometry.c
examples/11-color-mods/: CMakeLists.txt  color-mods.c  compile_commands.json
